tests/ui/impl-trait/in-trait/bad-projection-from-opaque.stderr
error[E0562]: `impl Trait` is not allowed in paths
  --> $DIR/bad-projection-from-opaque.rs:4:26
   |
LL |     fn foo<'a>() -> <&'a impl Sized as Bar>::Output;
   |                          ^^^^^^^^^^
   |
   = note: `impl Trait` is only allowed in arguments and return types of functions and methods

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0562`.
